functionalities updated